<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".AdaugaJucatorActivity">

    <TextView
        android:id="@+id/adauga_tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="24sp"
        android:text="@string/adauga_title" />

    <!-- Input nume -->
    <LinearLayout
        android:id="@+id/adauga_input_nume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/adauga_tv_title">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:text="@string/adauga_input_name_label" />

        <EditText
            android:id="@+id/adauga_et_nume"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_weight=".7" />

    </LinearLayout>

    <!-- Input numar -->
    <LinearLayout
        android:id="@+id/adauga_input_numar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/adauga_input_nume">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:text="@string/adauga_input_numar_label" />

        <EditText
            android:id="@+id/adauga_et_numar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_weight=".7" />

    </LinearLayout>

    <!-- Input data -->
    <LinearLayout
        android:id="@+id/adauga_input_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/adauga_input_numar">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:text="@string/adauga_input_data_label" />

        <EditText
            android:id="@+id/adauga_et_data"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:layout_weight=".7" />

    </LinearLayout>

    <!-- Input pozitie -->
    <LinearLayout
        android:id="@+id/adauga_input_pozitie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/adauga_input_data">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:text="@string/adauga_input_pozitie_label" />

        <Spinner
            android:id="@+id/adauga_spn_pozitie"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".7" />

    </LinearLayout>

    <TextView
        android:id="@+id/adauga_tv_alert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/adauga_tv_alert"
        android:textColor="@android:color/holo_red_dark"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/adauga_btn_save"
        android:visibility="gone"
        android:textSize="14sp" />


    <!-- Button Salvare -->
    <Button
        android:id="@+id/adauga_btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/adauga_btn_save_label" />

</androidx.constraintlayout.widget.ConstraintLayout>